# docs/swagger.json
@@ -45,43 +45,6 @@
                 }
             }
         },
-        "/captures": {
-            "get": {
-                "description": "Gets a list of captures from a User with input data from DDB",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Gets a list of captures from a User",
-                "parameters": [
-                    {
-                        "description": "Userid",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/routes.GetCapturesList.GetCapturesStruct"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "string username",
-                        "schema": {
-                            "$ref": "#/definitions/routes.GetUser.GetOutputStruct"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
         "/session": {
             "delete": {
                 "description": "Just deletes the cookie the user was using to login",
@@ -101,7 +64,7 @@
         },
         "/users": {
             "get": {
-                "description": "Gets one user with input data from DDB",
+                "description": "Searchs for Users with input data from DDB",
                 "consumes": [
                     "application/json"
                 ],
@@ -111,56 +74,22 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Get a User",
+                "summary": "Searchs for a User",
                 "parameters": [
                     {
-                        "description": "Userid",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/routes.GetUser.GetInputStruct"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "string username",
-                        "schema": {
-                            "$ref": "#/definitions/routes.GetUser.GetOutputStruct"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },
-            "put": {
-                "description": "Updates a User with input data to DDB",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Updates a User",
-                "parameters": [
-                    {
-                        "description": "User data",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/routes.UpdateUser.UpdateInputStruct"
-                        }
+                        "type": "string",
+                        "description": "username query",
+                        "name": "query",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "String Array of Usernames",
+                        "schema": {
+                            "$ref": "#/definitions/routes.SearchUser.SearchUsersOutputStruct"
+                        }
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -198,6 +127,80 @@
                         "description": "Internal Server Error"
                     }
                 }
+            }
+        },
+        "/users/{UserID}": {
+            "get": {
+                "description": "Gets one user with input data from DDB",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get a User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "the user ID",
+                        "name": "UserID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "string username",
+                        "schema": {
+                            "$ref": "#/definitions/routes.GetUser.GetUserOutputStruct"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "put": {
+                "description": "Updates a User with input data to DDB",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Updates a User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "the user ID",
+                        "name": "UserID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "User data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/routes.UpdateUser.UpdateInputStruct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
             },
             "delete": {
                 "description": "Deletes a User with input data from DDB",
@@ -212,6 +215,13 @@
                 ],
                 "summary": "Deletes a User",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "the user ID",
+                        "name": "UserID",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "Userid",
                         "name": "request",
@@ -232,7 +242,40 @@
                 }
             }
         },
-        "/users/:UserID/captures": {
+        "/users/{UserID}/captures": {
+            "get": {
+                "description": "Gets a list of captures from a User with input data from DDB",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Captures"
+                ],
+                "summary": "Gets a list of captures from a User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "the user ID",
+                        "name": "UserID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "string username",
+                        "schema": {
+                            "$ref": "#/definitions/routes.GetCapturesList.GetCapturesListOutputStruct"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
             "post": {
                 "description": "Gets a list of mushrooms to add as captures to the user journal",
                 "consumes": [
@@ -246,6 +289,13 @@
                 ],
                 "summary": "Add a new list of captures to the user",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "the user ID",
+                        "name": "UserID",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "info to add and update the capture with. Will NOT overwrite notes if notes already exist. Instances will append",
                         "name": "request",
@@ -266,7 +316,7 @@
                 }
             }
         },
-        "/users/:UserID/captures/:CaptureID": {
+        "/users/{UserID}/captures/{CaptureID}": {
             "get": {
                 "description": "Gets all relevant information about a mushroom that's been captured for a user",
                 "consumes": [
@@ -279,6 +329,22 @@
                     "Auth"
                 ],
                 "summary": "Get information about a captured mushroom",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "the user ID",
+                        "name": "UserID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "the capture ID",
+                        "name": "CaptureID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "mushroom information",
@@ -337,6 +403,44 @@
                 }
             }
         },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "TotalCaptures": {
+                    "type": "integer"
+                },
+                "color1": {
+                    "type": "string"
+                },
+                "color2": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "follows": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "routes.AddCaptures.AddCapturesInputStruct": {
             "type": "object",
             "properties": {
@@ -378,27 +482,22 @@
                 }
             }
         },
-        "routes.GetCapturesList.GetCapturesStruct": {
+        "routes.GetCapturesList.GetCapturesListOutputStruct": {
             "type": "object",
             "properties": {
-                "userid": {
-                    "type": "string"
+                "captures": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Capture"
+                    }
                 }
             }
         },
-        "routes.GetUser.GetInputStruct": {
+        "routes.GetUser.GetUserOutputStruct": {
             "type": "object",
             "properties": {
-                "userid": {
-                    "type": "string"
-                }
-            }
-        },
-        "routes.GetUser.GetOutputStruct": {
-            "type": "object",
-            "properties": {
-                "item": {
-                    "type": "string"
+                "user": {
+                    "$ref": "#/definitions/models.User"
                 }
             }
         },
@@ -441,19 +540,14 @@
                 }
             }
         },
-        "routes.SearchUser.SearchInputStruct": {
+        "routes.SearchUser.SearchUsersOutputStruct": {
             "type": "object",
             "properties": {
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "routes.SearchUser.SearchOutputStruct": {
-            "type": "object",
-            "properties": {
-                "items": {
-                    "type": "string"
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.User"
+                    }
                 }
             }
         },
